--- a/src/app/components/panel/reports/reports.component.html
+++ b/src/app/components/panel/reports/reports.component.html
@@ -1,9 +1,8 @@
-<div class="contenedor-flotante">
   <div class="row justify-content-center">
     <div class="col-md-9">
       <div class="d-flex justify-content-center">
         <div class="contenedor-titulo">
-          <h3 class="text-center">Reportes</h3>
+          <h1 class="text-center">EVALUACION DE INDICADORES Y REPORTE GENERAL</h1>
         </div>
       </div>
       <div class="indicadores-container">
@@ -17,20 +16,21 @@
               <div class="collapse" [ngClass]="{'show': toggledIndex === i}">
                 <div class="card card-body">
                   <div *ngFor="let variable of Variables; let j = index">
-                    <p *ngIf="j === 0"><strong>Periodo De evaluacion :</strong> {{indicador.PeriodoEvaluacion}}</p>
-                    <p>{{variable.NombreVariable}} - {{variable.Detalle}}
+                    <p *ngIf="j === 0" class="title-bolder" >Periodo De evaluacion : {{indicador.PeriodoEvaluacion}}</p>
+                    <p [ngClass]="{'title-bolder' : Variables[j] == Variables[0]}">  
+                      {{variable.NombreVariable}} - {{variable.Detalle}}
                       <input *ngIf="j !== 0" [(ngModel)]="variable.Valor" (change)="updateVariables(variable.Valor, variable.idVariable)" type="text"/>
                     </p>
                   </div>
                   <!-- Utiliza *ngIf para asegurarte de que Variables[0] esté definido antes de intentar acceder a Valor -->
                   <div *ngIf="Variables[0]">
-                    <p>Resultado de evaluacion de indicador: {{ Variables[0].Valor }}</p>
+                    <p class="title-bolder">Resultado de evaluacion de indicador: {{ Variables[0].Valor }}</p>
                   </div>
                   <button (click)="evaluarYObtenerFormula(indicador.IdIndicador!, i);">Evaluar indicador</button>
                 </div>
               </div>
               </div>
-              <button class="generar-reporte-btn" (click)="generarReporteIndicadoresCuantitativos()">Generar reportes indicadores cuantitativos</button>
+              <button class="generar-reporte-btn" (click)="generarReporteIndicadoresCuantitativos()">Mostrar tabla indicadores cuantitativos</button>
               <div *ngIf="mostrarTotalIndicadores" class="tablaCuantitativos">
                 <table border="1" style="width: 50%; text-align: center; margin-top: 20px;">
                
@@ -89,7 +89,7 @@
                 </div>
               </div>
             </div>
-            <button class="generar-reporte-cualitativos-btn" (click)="tablaCualitativos()">Generar reportes indicadores cualitativos</button>
+            <button class="generar-reporte-cualitativos-btn" (click)="tablaCualitativos()">Mostrar tabla indicadores cualitativos</button>
             <table border="1" *ngIf="reportCualitativos">
               <tr>
                 <th rowspan="2">Total Indicadores</th>
@@ -122,7 +122,7 @@
             </table>
           </div>
         </div>
-        <button class="reporte-general-btn" (click)="mostrarReporteGeneral()">Reporte general</button>
+        <button class="reporte-general-btn" (click)="mostrarReporteGeneral()">Mostrar tabla general</button>
         <div *ngIf="mostrarTablaCriterios">
           <table border="1">
             <tr>
@@ -157,4 +157,3 @@
   </div>
 </div>
 <router-outlet></router-outlet>
-</div>
