--- a/src/app/shared/detalle-indicador/estado-evidencia/estado-evidencia.component.html
+++ b/src/app/shared/detalle-indicador/estado-evidencia/estado-evidencia.component.html
@@ -1,5 +1,3 @@
-
-
 <div class="container">
     <div class="contenedor">
         <div class="contenedor-title">
@@ -7,34 +5,34 @@
         </div>   
         <ng-container *ngFor="let evidencia of evidencias">
             <div class="contenedor-evidencia">
-                <ng-container *ngIf="evidencia">
-                    <div class="d-flex justify-content-betweeen">
-                        <p>{{GetMaxCharacters(evidencia.Detalle)}}
-                            <span class="material-symbols-outlined informacion" data-bs-toggle="modal" data-bs-target="#exampleModal" (click)="selectEvidenciaDetalle(evidencia.Detalle)" >help</span>
-                            <app-informacion-modal [DetalleEvidencia]="detalleSelected" ></app-informacion-modal></p>
-                        <ng-container *ngIf="ActiveRols == '2'">
-                            <span class="material-symbols-outlined icon-size" data-bs-toggle="modal" data-bs-target="#staticBackdrop" (click)="selectEvidenciaId(evidencia.IdEvidencia)">
-                                note_add
-                            </span>
-                            <app-modal-evidencias [IdEvidenciaSelected]="idEvideSelected" [elemento]="idElemento"></app-modal-evidencias>
-                        </ng-container>  
-                    </div>
-                    <!-- <ng-container *ngIf="ActiveRols == '1'">
-                        <li class="list-group-item fw-bolder">
-                            <div class="d-flex justify-content-between align-items-center">
-                                <p>
-                                    Personal encargado de subir la documentación
-                                </p>
-                                <span class="material-symbols-outlined agregar icon-hover" data-bs-target="#agregarEncargado" data-bs-toggle="modal" (click)="selectEvidenciaId(evidencia.IdEvidencia); statusFilter()">add</span>
-                            </div>
-                        </li>
-                        <app-asignar-usuario [IdEvidencia]="evidencia.IdEvidencia" [IdEvidenciaSelected]="idEvideSelected" ></app-asignar-usuario>
-                    </ng-container> -->
-                    <ng-container *ngIf="ActiveRols == '2'"> 
-                        <app-evidencia-file-contenedor (idArchivoSeleccionadoEmitido)="idArchivoSeleccionado = $event" [IdEvidencia]="evidencia.IdEvidencia" [rolviewradios]="subRolActivo"></app-evidencia-file-contenedor>
+              <ng-container *ngIf="evidencia">
+                <div class="d-flex justify-content-between">
+                  <p>{{GetMaxCharacters(evidencia.Detalle)}}
+                    <span class="material-symbols-outlined informacion" 
+                          data-bs-toggle="modal" 
+                          data-bs-target="#exampleModal" 
+                          (click)="selectEvidenciaDetalle(evidencia.Detalle)">help</span>
+                    <ng-container *ngIf="ActiveRols == '2'">
+                      <!-- Mostrar el icono solo si evidencia.IdEvidencia no está en evideEstado2Array -->
+                      <span *ngIf="isEvidenciaNotInArray(evidencia.IdEvidencia)" 
+                            class="material-symbols-outlined icon-size" 
+                            data-bs-toggle="modal" 
+                            data-bs-target="#staticBackdrop" 
+                            (click)="selectEvidenciaId(evidencia.IdEvidencia)">
+                        note_add
+                      </span>
                     </ng-container>
-                    <hr>
+                    <app-informacion-modal [DetalleEvidencia]="detalleSelected"></app-informacion-modal>
+                  </p>
+                  <ng-container *ngIf="ActiveRols == '2'">
+                    <app-modal-evidencias [IdEvidenciaSelected]="idEvideSelected" [elemento]="idElemento"></app-modal-evidencias>
+                  </ng-container>
+                </div>
+                <ng-container *ngIf="ActiveRols == '2'"> 
+                    <app-evidencia-file-contenedor (idArchivoSeleccionadoEmitido)="idArchivoSeleccionado = $event" [IdEvidencia]="evidencia.IdEvidencia" [rolviewradios]="subRolActivo" (EvideEstado2)="handleEvideEstado2($event)"></app-evidencia-file-contenedor>
                 </ng-container>
+                <hr>
+              </ng-container>
             </div>
         </ng-container>
     </div>
