--- a/src/app/components/panel/reports/report-by-criterio/report-by-criterio.component.css
+++ b/src/app/components/panel/reports/report-by-criterio/report-by-criterio.component.css
@@ -156,3 +156,16 @@ h1 {
   width: 100%;
   height: 100%;
 }
+
+.valoracion {
+  font-size: 14px;
+  font-weight: bold;
+  color: #333;
+  text-align: center;
+  margin-bottom: 10px;
+  background-color: #f9f9f9;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
