--- a/src/app/components/panel/usuarios/usuarios-list/usuarios-list.component.html
+++ b/src/app/components/panel/usuarios/usuarios-list/usuarios-list.component.html
@@ -1,9 +1,9 @@
 <div class="contenedor-flotante">
     <button class="btn btn-info" type="button" [routerLink]="['/panel/usuarios/addUsuario']" routerLinkActive="router-link-active" >Nuevo usuario</button>
+    <div></div>
     <table class="table">
       <thead class="table-dark">
         <tr>
-          <th scope="col">ID</th>
           <th scope="col">Nombre</th>
           <th scope="col">Apellido</th>
           <th scope="col">Correo</th>
@@ -19,18 +19,16 @@
       </thead>
       <tbody *ngIf="mostrarUsuariosInactivos == false">
         <tr *ngFor="let usuario of usuarios">
-          <th scope="row">{{usuario.idUsuario}}</th>
           <td>{{usuario.nombre}}</td>
           <td>{{usuario.apellido}}</td>
           <td>{{usuario.correo}}</td>
           <td>
-            <button (click)="updateUserStatus(usuario.idUsuario)">Eliminar</button>
+            <button (click)="deleteUserStatus(usuario.idUsuario)">Eliminar</button>
           </td>
         </tr>
       </tbody>
       <tbody *ngIf="mostrarUsuariosInactivos">
         <tr *ngFor="let usuarioIn of usuariosInactivos" >
-          <th scope="row">{{usuarioIn.idUsuario}}</th>
           <td>{{usuarioIn.nombre}}</td>
           <td>{{usuarioIn.apellido}}</td>
           <td>{{usuarioIn.correo}}</td>
